Style.css
html, body {

    margin: 0;
    padding: 0;
    font-family: "Poppins", serif;
    background-color: #ececec;
    height: 100%;

}

.about{

    padding: 30px;
    font-size: 20px;
    max-width: 800px;
    margin: auto;


}

summary {
    cursor: pointer;
    font-weight: bold;
    background-color: #3498db;
    color: #fff;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 10px;
}

/*  Header */



.header_middle, .header_bottom, .header_top{

    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height: fit-content;


}

.header_top {
    margin-top: 10px ;


}
.header_top select {
    border-radius: 5px;
    height: 50px;
    font-size: 14px;
}
.header_top .left_group_buttons,
.header_top p ,
.header_top .Right_group_buttons {

    flex: 1;
    text-align: center;

}

.header_top p {
    margin-top: 20px;
}

.header_top button{
    height: 60px;
    width: 100px;
    font-size: 14px;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 20px;
    cursor: pointer;
}
.header_top button:hover{
    background-color: #15213D;
    color: #cccccc;


}


/*header middle*/
.header_middle{
    background-color: #15213D ;
    color: #cccccc;

}

.header_middle h1 , .header_middle h1 a {
    margin-top: 30px;
    text-decoration: none;
    color: #cccccc;


}
.search-container {
    margin-top: 30px;
    height: 40px;
    display: flex;
    border: 1px solid #ccc;
    border-radius: 5px;
    overflow: hidden;
}

.search-container input {
    padding: 10px;
    border: none;
    border-radius: 5px 0 0 5px;
    width: 200px;
}

.search-container button {
    background-color: #007bff;
    border: none;
    border-radius: 0 5px 5px 0;
    padding: 10px;
    cursor: pointer;
}

button img {
    width: 20px;
    height: 20px;
}

/*header bottom*/
.header_bottom{

    justify-content: left;

}


/* Navigation Styles */
nav {
    font-size: 20px;
    padding:  12px;
    font-weight: bold;

}

nav ul{
    list-style: none;
    padding: 20px;
    gap: 20px;
    display: flex;
    flex-direction: row;
}

nav p{
    color: #454545;
    padding: 10px;
    display: block;
}

nav a {
    text-decoration: none;
    color: #454545;
    padding: 10px;
    display: block;
}

nav p:hover ,nav a:hover{
    color: crimson;
    cursor: pointer;
    border-bottom: 2px solid crimson;



}




/* Sub-navigation Styles */
.submenu ul {
    display: none;
    position: absolute;
    background-color: #ffff;
    z-index: 1;
    border: 1px solid #ccc;

}
.submenu2 ul {
    display: none;
    position: absolute;
    background-color: #ffff;
    border: 1px solid #ccc;

}

.Big_submenu p{
    margin-top: 0  ;

}

.Big_submenu ul{

    display: none;
    position: absolute;
    background-color: #ffff;
    z-index: 1;
    border: 1px solid #ccc;
    border-radius: 10px;
}


.Big_submenu:hover > ul {
    display: flex;
    flex-direction: row;
    gap: 70px;


}




.submenu:hover > ul {
  display: flex;
    flex-direction: row;
    margin-left: 20px;


}





/*footer*/

footer {

    position: relative;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    background-color: #333;
    color: #fff;
    padding: 20px;
    text-align: center;

}

footer p {
    text-align: center;

}

#footer_table{
    width :  80%;
    height: 20px;
    border-collapse: separate;
    border-spacing: 10px;
}


th, td {
    padding: 10px;

}
td  {
    text-align: left;
}

th {
    background-color: #555;
    color: #fff;
}

.Hidden_link{
    text-decoration: none;
    color: #fff;

}




/*Sign up & Sign In Page*/
.Cross_exit{
    position: absolute;
    top: 0 ;
    right: 0;
    padding: 20px;
    cursor: pointer;
}

.Center_Body{

    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #ddd;
    font-size: 14px;
}

.container {
    background-color: #fff;
    width: 70%;


    height: 90%;
    position: relative;
    overflow-x: hidden;
}
.container .forms-container {
    position: relative;
    width: 50%;
    text-align: center;
}
.container .forms-container .form-control {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 480px;
    transition: all 0.5s ease-in;
}

.container .forms-container .form-control form {
    display: flex;
    flex-direction: column;
    margin: 0 30px;
}
.container .forms-container .form-control form input {
    margin: 10px 0;
    border: none;
    padding: 15px;
    background-color: #efefef;
    border-radius: 5px;
}
.container .forms-container .form-control form button {
    border: none;
    padding: 20px;
    margin-top: 5px;
    background-color: #059669;
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
}
.container .forms-container .form-control form button:focus {
    outline: none;
}


.container .forms-container .form-control.signup-form {
    opacity: 0;
    z-index: 1;
    left: 200%;
    height: fit-content;
}
.container .forms-container .form-control.signin-form {
    opacity: 1;
    z-index: 2;
    left: 0;
    height: fit-content;
}
.container .intros-container {
    position: relative;
    left: 50%;
    width: 50%;

    text-align: center;
}
.container .intros-container .intro-control {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 100vh;
    color: #fff;
    background:  #059669;
    transition: all 0.5s ease-in;
}

.container .intros-container .intro-control button {
    border: none;
    padding: 15px 30px;
    background-color: #10b981;
    border-radius: 50px;
    color: #fff;
    margin: 10px 0;
    cursor: pointer;
}


.container .intros-container .intro-control.signin-intro {
    opacity: 1;
    z-index: 2;
}
.container .intros-container .intro-control.signup-intro {
    opacity: 0;
    z-index: 1;
}

.change .forms-container .form-control.signup-form {
    opacity: 1;
    z-index: 2;
    transform: translateX(-100%);

}
.change .forms-container .form-control.signup-form button {
    background-color: #2563eb;
}
.change .forms-container .form-control.signin-form {
    opacity: 0;
    z-index: 1;
    transform: translateX(-100%);
}
.change .intros-container .intro-control {
    transform: translateX(-100%);
    background:  #3b82f6;
}
.change .intros-container .intro-control #signin-btn {
    background-color: #2563eb;
}
.change .intros-container .intro-control.signin-intro {
    opacity: 0;
    z-index: 1;
}
.change .intros-container .intro-control.signup-intro {
    opacity: 1;
    z-index: 2;
}





#SUBMIT ,  #SUBMIT2 {
    width: 100%;
    background-color: #007bff;
    color: #fff;
    padding: 10px 15px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 1em;

}

#SUBMIT:hover {
    background-color: #15213D;
}



.go_to_Sigin{
    color: #6180c9;
}

#Sign_out {
    margin: 0 50% 50% ;

    height: 60px;
    width: 100px;
    font-size: 14px;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 20px;
    cursor: pointer;
}
#Sign_out:hover{
    background-color: #15213D;
    color: #cccccc;


}





/*Shopping Details*/

.Center_Body_Shopping {
    max-width: 800px;
    margin: 20px auto;

}

.Center_Body_Shopping h2 {
    color: #3498db;



}
article {
    background-color: #f9f9f9;
    padding: 20px;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    border-radius: 20px;
}

aside{
    text-align: center ;
    margin-right: 16px;
    float: right;
    padding: 20px;
    border: 2px solid #4266b9;


}
/*ALl categories */

.Horizontal_Line{
    width: 200px;

}
/*Men*/
.Men_category{

    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    gap: 10px;

}

.Men_category_jacket, .Men_category_pullovers , .Men_category_trousers{
    height: 776px;
    width: 400px;
    color: #15213D;
    text-align: left;
    font-size: 30px;

}

.Men_category_jacket{
    background-image: url("assets/Men/Jacket.jpg");



}
.Men_category_trousers{
    background-image: url("assets/Men/Trousers.jpg");

}
.Men_category_pullovers{
    background-image: url("assets/Men/Pullovers.jpg");

}

.Men_background{

    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url("assets/Men/background.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.Men_background video{
  height: 700px;
}

/*MEN jacket Pullover  Trousers  */

.MJ-name{
    font-size: 16px ;

}


#MPullovers_cards-container , #MTrousers_cards-container , #MJacket_cards-container {

    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    justify-content: center;
}


.card {
    border: 1px solid #ccc;
    padding: 10px;
    margin: 10px;
    text-align: center;
}


/*Product Details */

.Product_container {
    width: 75%;
    margin: 0 auto;
    padding: 15px;
    display: flex;
    gap: 200px;
    background-color: #fff;
    max-width: 100vw;
    height: 75%;
    position: relative;
}

/* Columns */

.right-column {
    width: 50%;
}

/* Product Description */
.product-description {
    border-bottom: 1px solid #E1E8EE;
    margin-bottom: 20px;
}
.product-price{
    font-size: 14px;
    color: #358ED7;
    letter-spacing: 1px;
    text-transform: uppercase;
    text-decoration: none;
}
#Product_details_name {
    font-weight: bold;
    font-size: 48px;
    color: #43484D;

}
#Product_details_description{
    font-size: 16px;
    font-weight: 300;
    color: #86939E;
    line-height: 24px;
}

.size-choose{
    margin-bottom: 20px;
}
.size-choose button {
    padding: 10px;
    margin: 5px;
    cursor: pointer;
    background-color: #fff;
    border-radius: 10px;
}

.size-choose button.selected {
    background-color: #3498db;
    color: #fff;
}


/* Product Price */
.product-price {
    display: flex;
    align-items: center;
}

.product-price span {
    font-size: 26px;
    font-weight: 300;
    color: #43474D;
    margin-right: 20px;
}

.cart-btn {
    background-color: #007bff;
    color: #fff;
    padding: 10px 15px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    font-size: 20px;

}


/*cart*/


#shopping-cart {
    margin: 40px;
}

#shopping-cart table {
    width: 100%;
    background-color: #F0F0F0;
}
#shopping-cart table td {
    background-color: #FFFFFF;
}


#btnEmpty {
    background-color: #ffffff;
    border: #d00000 1px solid;
    padding: 5px 10px;
    color: #d00000;
    float: right;
    text-decoration: none;
    border-radius: 3px;
    margin: 10px 0;
    cursor: pointer;
}


.product-image {
    height: 155px;
    width: 250px;
    background-color: #FFF;
}


.tbl-cart th {
    font-weight: normal;
}






/*VIDEO*/
video {
    width: 98%;
    padding: 20px;

}

